Dodano nowa podzakładke do zakladki Figury , Prostokąt

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -24,6 +24,9 @@
             <item
                 android:id="@+id/menuSubSquare"
                 android:title="Kwadrat" />
+            <item
+                android:id="@+id/menuSubRectangle"
+                android:title="Prostokąt" />
         </menu>
     </item>
 
